--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -16,7 +16,7 @@
           (keyup)="pesquisa(textoPesquisa.value)"
           >
           <ul class="list-group" style="position: absolute;">
-            <li class="list-group-item" *ngFor="let oferta of oferta2">{{oferta.titulo}}</li>
+            <li class="list-group-item" *ngFor="let oferta of oferta2">{{oferta.titulo | descricaoReduzida}}</li>
 
           </ul>
         </div>
