--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,5 +1,5 @@
 <div class="container my-5">
-  <div class="ordem-compra">
+  <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
     <form novalidate>
     
       <h5>Sua Compra</h5>
@@ -169,12 +169,21 @@
           </div>
 
         </div>
+
       </div>
 
       <hr />
-      <button type="submit" class="btn btn-primary btn-lg" [disabled]="formEstado"
+      <button
+      type="button"
+      class="btn btn-primary btn-lg"
+      [disabled]="formEstado"
       (click)="confirmarCompra()"
       >Cofirmar compra</button>
     </form>
   </div>
+
+  <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
+    <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
+  </div>
+  
 </div>
