--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,66 +1,55 @@
 <div class="container">
   <div class="ordem-compra my-5" *ngIf="idPedidoCompra === undefined">
     <form [formGroup]="formulario" novalidate (ngSubmit)="confirmarCompra()">
-    
-      <h5>Sua Compra</h5>
-      <hr />
 
-      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
-        <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid">
-        </div>
-        <div class="form-group col-sm-6">
-          Super Burger
-          <br />
-          Rodízio de Mini-hambúrger com opção de entrada.
-        </div>
+        <h5>Sua Compra</h5>
+        <hr />
 
-        <div>
-          <div class="row">
-            <div class="col">
-              <button type="button" class="btn btn-link">-</button>
-              1
-              <button type="button" class="btn btn-link">+</button>
+      <div class="form-row" *ngIf="itemCarrinhoServico.exibirItens().length; else carrinhoVazio">
+
+            <div  *ngFor="let item of itemCarrinho" class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+              <div class="form-group col-sm-1">
+                <img [src]="item.img.url" class="img-fluid">
+              </div>
+              <div class="form-group col-sm-6">
+                {{item.titulo}}
+                <br />
+                {{item.descrica_oferta}}
+              </div>
+
+              <div>
+                <div class="row">
+                  <div class="col">
+                    <button (click)="diminuir(item)" type="button" class="btn btn-link">-</button>
+                    {{item.quantidade}}
+                    <button (click)="adicionar(item)" type="button" class="btn btn-link">+</button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group col-sm-3 d-flex justify-content-end">
+                {{item.quantidade * item.valor | currency: 'BRL': true}}
+              </div>
             </div>
-          </div>
-        </div>
-
-        <div class="form-group col-sm-3 d-flex justify-content-end">
-          29.90
-        </div>
-      </div>
       
-      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
-        <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
-        </div>
-        <div class="form-group col-sm-6">
-          Estância das águas
-          <br />
-          Diversão garantida com piscinas, trilhas e muito mais.
-        </div>
-
-        <div>
-          <div class="row">
-            <div class="col">
-              <button type="button" class="btn btn-link">-</button>
-              1
-              <button type="button" class="btn btn-link">+</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group col-sm-3 d-flex justify-content-end">
-          31.90
-        </div>
       </div>
-      
-      <div class="form-row">
+
+      <div *ngIf="itemCarrinhoServico.totalCarrinhoCompra() > 0 " class="form-row">
         <div class="form-group col d-flex justify-content-end">
-          <h4>Total do pedido: 61.80</h4>
+          <h4>Total do pedido: {{itemCarrinhoServico.totalCarrinhoCompra() | currency: 'BRL': true}}</h4>
         </div>
       </div>
       <br />
+
+              <!--Carrinho Vazio-->
+              <ng-template #carrinhoVazio>
+                    <div 
+                        class="form-row d-flex justify-content-center" 
+                        style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0"
+                        >
+                        <p>Carrino vazio. Vá as compras e não percas as ofertas!!!</p>
+                    </div>
+                </ng-template>
 
       <h5>Dados de entrega</h5>
       <hr />
