--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="col-xl-2 col-md-2 col-sm-4">
-            <a href="#"><img src="/assets/carrinho.png" /></a>          
+            <a routerLink="/ordem-compra"><img src="/assets/carrinho.png" /></a>          
         </div>
       </div>
     </div>
